// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paper组件 快照测试 基本使用 1`] = `
<div
  className="sc-bdvvtL sc-gsDKAQ zCEun klchtu sinoui-paper"
>
  Paper Content
</div>
`;

exports[`Paper组件 快照测试 设置是否显示方角 1`] = `
<div
  className="sc-bdvvtL sc-gsDKAQ iHJAXL klchtu sinoui-paper"
>
  Paper Content
</div>
`;

exports[`Paper组件 快照测试 设置轮廓模式 1`] = `
<div
  className="sc-bdvvtL sc-gsDKAQ fylTGH klchtu sinoui-paper"
>
  Paper Content
</div>
`;

exports[`Paper组件 快照测试 设置阴影高度 1`] = `
<div
  className="sc-bdvvtL sc-gsDKAQ htMQwZ klchtu sinoui-paper"
  elevation={4}
>
  Paper Content
</div>
`;
